--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=123;Database=individuella-backend"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
